# gigol0-bot

./: .env.example  .env.sample  Cargo.toml  README.md  database.db  python_bot.py  quote_generator.py  requirements.txt
crates/golo-bot/: Cargo.toml
crates/golo-bot/src/: commands.rs  main.rs
crates/golo-lib/: Cargo.toml
crates/golo-lib/migrations/: 20260402232323_initial.sql
crates/golo-lib/src/: database.rs
crates/yx-bot/: Cargo.toml
crates/yx-bot/src/: commands.rs  img_utils.rs  main.rs
crates/yx-bot/src/dto/: mod.rs
crates/yx-lib/: Cargo.toml
crates/yx-lib/migrations/: 20260402232323_initial.sql  20260404182623_tracking.sql  20260404192341_roast_mode.sql
crates/yx-lib/src/db/: mod.rs
crates/yx-lib/src/db/models/user/: mod.rs
