[package]
name = "yx-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.5", default-features = false, features = [
    "rustls_backend",
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
] }
poise = "0.6.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
shuttle-runtime = "0.50.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yx-lib = { path = "../yx-lib" }
image = "0.25.10"
imageproc = "0.26.2"
ab_glyph = "0.2.32"
regex = "1.10"
moka = { version = "0.12", features = ["future"] }
futures = "0.3"
